--- a/Ars Futura/project/css/main.css
+++ b/Ars Futura/project/css/main.css
@@ -5,14 +5,13 @@ body {
   max-width: 1800px;
 }
 
-/*Navigation*/
+/********************************************Navigation********************************************/
 nav {
   background-color: #101724;
   color: white;
 }
 
 .navbar-nav {
-  float: right;
   font-weight: light;
 }
 
@@ -20,14 +19,13 @@ nav {
   font-weight: bold;
 }
 
-.navbar-nav a:hover, footer a:hover {
-  border-bottom: 2px solid #CD5741;
-}
-
-/*Header*/
+/********************************************Header********************************************/
 header {
   background-image: url(../images/header/hero-background.png);
   margin-top: 86px;
+}
+header div{
+  padding: 0;
 }
 
 header, .header-cta-image {
@@ -42,6 +40,7 @@ header, .header-cta-image {
 .header-container {
   height: 100%;
   position: relative;
+  margin: 0 auto;
 }
 
 .header-cta > div {
@@ -69,24 +68,35 @@ header, .header-cta-image {
   border-radius: 100%;
   border: 8px solid white;
   position: absolute;
+
+-webkit-box-shadow: 0px 0px 20px 15px rgba(0,0,0,0.15);
+-moz-box-shadow: 0px 0px 20px 15px rgba(0,0,0,0.15);
+box-shadow: 0px 0px 20px 15px rgba(0,0,0,0.15);
 }
 
-.header-cta-text {
+/*For specificity purposes*/
+.header-cta .header-cta-text {
   color: white;
   position: absolute;
+  height: 92%;
+  top:4%;
 }
 
 .header-cta-text h1 {
-  font-size: 3em;
+  font-size: 3.2em;
   font-weight: bold;
-  margin-bottom: 25px;
   margin-top: 0px;
+  padding: 0;
+  margin-bottom: 25px;
 }
 
-.header-cta-text p {
+/*For specificity purposes*/
+.landing-page p {
   font-size: 1em;
   line-height: 1.5em;
   max-height: 150px;
+  padding: 0;
+  margin-bottom: 35px;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -97,36 +107,113 @@ header, .header-cta-image {
 
 .header-cta-text a {
   background-color: #1E2731;
+  max-width: 128px;
   border-radius: 5%;
-  bottom: 0;
-  bottom: 15px;
   color: white;
   font-size: 1em;
   padding: 10px 25px;
-  position: absolute;
   text-decoration: none;
 }
 
 .header-cta-text a:hover {
   color: #CD5741;
 }
+/******************************************** Main container ********************************************/
+.main-container{
+  display: inline-block;
+  background-color: white;
+}
 
-/* CSS for high-resolution devices */
-@media only screen and (-Webkit-min-device-pixel-ratio: 1.5), only screen and (-moz-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min-device-pixel-ratio: 1.5) {
+.main-container h2{
+  text-align: center;
+  padding: 10px 0px;
+  font-size: 2.5em;
+  font-weight: bold;
+  margin-top: 0px;
+  margin-bottom: 70px;
+
+}
+.main-container h2 span{
+  border-bottom: 3px solid #CD5741;
+  letter-spacing: -1px;
+}
+.row{
+  margin-top: 70px;
+}
+.feature-container{
+  padding: 10px 25px;
+  /*background-color: blue;*/
+}
+.feature-container > div{
+  /*background-color: red;*/
+}
+.feature-inside{
+  /*background-color:yellow;*/
+  text-align: center;
+}
+.feature-inside h3{
+  font-size: 1.7em;
+  font-weight: bold;
+}
+.feature-inside q{
+  font-style: italic;
+}
+.feature-inside p{
+  font-weight: bold;
+}
+.feature-divider{
+  background-color: #CD5741;
+  height: 3px;
+  width: 40px;
+  margin: 17px auto;
+}
+.feature-image{
+  margin: 0 auto;
+  height: 80px;
+  width: 80px;
+  -ms-background-position-x: center;
+  -ms-background-position-y: bottom;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+}
+.feature-image-one{
+  background-image: url(../images/features/feature-one-icon.png);
+}
+.feature-image-two{
+  background-image: url(../images/features/feature-two-icon.png);
+}
+.feature-image-three{
+  background-image: url(../images/features/feature-three-icon.png);
+}
+/**************************************** CSS for high-resolution devices ****************************************/
+  @media only screen and (-Webkit-min-device-pixel-ratio: 1.5), only screen and (-moz-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min-device-pixel-ratio: 1.5) {
   header {
     background-image: url(../images/header/hero-background@2x.png);
   }
-
   .header-cta-image {
     background-image: url(../images/header/hero-image@2x.png);
   }
+  .feature-image{
+    background-size: contain;
+  }
+  .feature-image-one{
+    background-image: url(../images/features/feature-one-icon@2x.png);
+  }  
+  .feature-image-two{
+    background-image: url(../images/features/feature-two-icon@2x.png);
+  }  
+  .feature-image-three{
+    background-image: url(../images/features/feature-three-icon@2x.png);
+  }
 }
-/* Media queries */
+/******************************************** Media queries ********************************************/
 @media screen and (max-width: 479px) {
   header {
     height: 320px;
   }
-
+      .header-container{
+    width: 100%;
+  }
   .header-cta {
     height: calc(320px*0.5);
   }
@@ -141,14 +228,19 @@ header, .header-cta-image {
 
   .header-cta-text p {
     max-height: 70px;
+     margin-bottom: 15px;
   }
+
+
 }
 
 @media screen and (min-width: 480px) {
   header {
     height: 370px;
   }
-
+      .header-container{
+    width: 80%;
+  }
   .header-cta {
     height: calc(370px*0.5);
   }
@@ -162,17 +254,45 @@ header, .header-cta-image {
   }
 }
 
+@media only screen and (max-width: 620px) {
+  .feature-container{
+    width: 100%;
+  }
+.feature-inside{
+  width: 280px;
+  margin-left:calc((100% - 280px) / 2)
+}
+}
 @media only screen and (max-width: 767px) {
   body {
     font-size: 12px;
   }
+  .header-cta-text p {
+  max-height: 70px;
+}
+.feature-container{
+  padding: 0;
+}
+/*.feature-inside{
+  width: 280px;
+  margin-left:calc((100% - 280px) / 2)
+}*/
 }
 
 @media only screen and (min-width: 768px) {
   header {
     height: 570px;
   }
+    .navbar-nav {
+  float: right;
+}
 
+.navbar-nav a:hover, footer a:hover {
+  border-bottom: 2px solid #CD5741;
+}
+      .header-container{
+    width: 700px;
+  }
   .header-cta {
     height: calc(570px*0.5);
   }
@@ -185,8 +305,30 @@ header, .header-cta-image {
     margin-left: 8%;
     left: calc(570px*0.5);
   }
+
 }
 
+@media only screen and (max-width: 992px) {
+    .feature-container{
+  padding: 10px 15px;
+  /*background-color: blue;*/
+}
+  .feature-container div{
+  padding: 0;
+  /*background-color: blue;*/
+}
+}
+@media only screen and (min-width: 992px) {
+      .header-container{
+    width: 800px;
+  }
+
+}
+@media only screen and (min-width: 1200px) {
+    .header-container{
+    width: 1050px;
+  }
+}
 @media only screen and (min-width: 1601px) {
   body {
     margin-left: calc((100% - 1800px) / 2);
@@ -195,7 +337,9 @@ header, .header-cta-image {
   header {
     height: 720px;
   }
-
+  .header-container{
+    width: 1200px;
+  }
   .header-cta {
     height: calc(720px*0.5);
   }
