--- a/Ars Futura/project/css/main.css
+++ b/Ars Futura/project/css/main.css
@@ -14,8 +14,10 @@ nav {
 .navbar-nav {
   font-weight: light;
 }
-
 .navbar-nav span {
+  font-weight: bold;
+}
+.navbar-nav h1 {
   font-weight: bold;
 }
 
@@ -24,7 +26,7 @@ header {
   background-image: url(../images/header/hero-background.png);
   margin-top: 86px;
 }
-header div{
+header div {
   padding: 0;
 }
 
@@ -39,170 +41,169 @@ header, .header-cta-image {
 
 .header-container {
   height: 100%;
-  position: relative;
   margin: 0 auto;
-}
-
-.header-cta > div {
-  height: 100%;
+  position: relative;
 }
 
 .header-cta {
   -ms-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
   left: 0;
   position: absolute;
   right: 0;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
 }
-
 .header-cta > div {
   height: 100%;
 }
+.header-cta .header-cta-text {
+  color: white;
+  height: 92%;
+  position: absolute;
+  top: 4%;
+}
 
 .header-cta-image {
+  -moz-box-shadow: 0px 0px 20px 15px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0px 0px 20px 15px rgba(0, 0, 0, 0.15);
   background-image: url(../images/header/hero-image.png);
   border-radius: 100%;
   border: 8px solid white;
+  box-shadow: 0px 0px 20px 15px rgba(0, 0, 0, 0.15);
   position: absolute;
-
--webkit-box-shadow: 0px 0px 20px 15px rgba(0,0,0,0.15);
--moz-box-shadow: 0px 0px 20px 15px rgba(0,0,0,0.15);
-box-shadow: 0px 0px 20px 15px rgba(0,0,0,0.15);
 }
 
 /*For specificity purposes*/
-.header-cta .header-cta-text {
-  color: white;
-  position: absolute;
-  height: 92%;
-  top:4%;
-}
-
 .header-cta-text h1 {
   font-size: 3.2em;
   font-weight: bold;
+  margin-bottom: 25px;
   margin-top: 0px;
   padding: 0;
-  margin-bottom: 25px;
+}
+.header-cta-text span {
+  font-weight: bold;
+}
+.header-cta-text a {
+  background-color: #1e2731;
+  border-radius: 5%;
+  color: white;
+  font-size: 1em;
+  max-width: 128px;
+  padding: 10px 25px;
+  text-decoration: none;
+}
+.header-cta-text a:hover {
+  color: #cd5741;
 }
 
 /*For specificity purposes*/
 .landing-page p {
   font-size: 1em;
   line-height: 1.5em;
-  max-height: 150px;
-  padding: 0;
   margin-bottom: 35px;
+  max-height: 150px;
   overflow: hidden;
+  padding: 0;
   text-overflow: ellipsis;
 }
 
-.header-cta-text span {
-  font-weight: bold;
-}
-
-.header-cta-text a {
-  background-color: #1E2731;
-  max-width: 128px;
-  border-radius: 5%;
-  color: white;
-  font-size: 1em;
-  padding: 10px 25px;
-  text-decoration: none;
-}
-
-.header-cta-text a:hover {
-  color: #CD5741;
-}
 /******************************************** Main container ********************************************/
-.main-container{
-  display: inline-block;
+.main-container {
   background-color: white;
+  display: inline-block;
 }
-
-.main-container h2{
-  text-align: center;
-  padding: 10px 0px;
+.main-container h2 {
   font-size: 2.5em;
   font-weight: bold;
-  margin-top: 0px;
   margin-bottom: 70px;
-
+  margin-top: 0px;
+  padding: 10px 0px;
+  text-align: center;
 }
-.main-container h2 span{
-  border-bottom: 3px solid #CD5741;
+.main-container h2 span {
+  border-bottom: 3px solid #cd5741;
   letter-spacing: -1px;
 }
-.row{
+
+.row {
   margin-top: 70px;
 }
-.feature-container{
+
+.feature-container {
   padding: 10px 25px;
   /*background-color: blue;*/
 }
-.feature-container > div{
-  /*background-color: red;*/
-}
-.feature-inside{
-  /*background-color:yellow;*/
+
+.feature-inside {
   text-align: center;
 }
-.feature-inside h3{
+.feature-inside h3 {
   font-size: 1.7em;
   font-weight: bold;
 }
-.feature-inside q{
+.feature-inside q {
   font-style: italic;
 }
-.feature-inside p{
+.feature-inside p {
   font-weight: bold;
 }
-.feature-divider{
-  background-color: #CD5741;
+
+.feature-divider {
+  background-color: #cd5741;
   height: 3px;
-  width: 40px;
   margin: 17px auto;
+  width: 40px;
 }
-.feature-image{
-  margin: 0 auto;
-  height: 80px;
-  width: 80px;
+
+.feature-image {
   -ms-background-position-x: center;
   -ms-background-position-y: bottom;
   background-position: center bottom;
   background-repeat: no-repeat;
+  height: 80px;
+  margin: 0 auto;
+  width: 80px;
 }
-.feature-image-one{
+
+.feature-image-one {
   background-image: url(../images/features/feature-one-icon.png);
 }
-.feature-image-two{
+
+.feature-image-two {
   background-image: url(../images/features/feature-two-icon.png);
 }
-.feature-image-three{
+
+.feature-image-three {
   background-image: url(../images/features/feature-three-icon.png);
 }
+
 /**************************************** CSS for high-resolution devices ****************************************/
-  @media only screen and (-Webkit-min-device-pixel-ratio: 1.5), only screen and (-moz-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min-device-pixel-ratio: 1.5) {
+@media only screen and (-Webkit-min-device-pixel-ratio: 1.5), only screen and (-moz-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min-device-pixel-ratio: 1.5) {
   header {
     background-image: url(../images/header/hero-background@2x.png);
   }
+
   .header-cta-image {
     background-image: url(../images/header/hero-image@2x.png);
   }
-  .feature-image{
+
+  .feature-image {
     background-size: contain;
   }
-  .feature-image-one{
+
+  .feature-image-one {
     background-image: url(../images/features/feature-one-icon@2x.png);
-  }  
-  .feature-image-two{
+  }
+
+  .feature-image-two {
     background-image: url(../images/features/feature-two-icon@2x.png);
-  }  
-  .feature-image-three{
+  }
+
+  .feature-image-three {
     background-image: url(../images/features/feature-three-icon@2x.png);
   }
 }
@@ -211,9 +212,11 @@ box-shadow: 0px 0px 20px 15px rgba(0,0,0,0.15);
   header {
     height: 320px;
   }
-      .header-container{
+
+  .header-container {
     width: 100%;
   }
+
   .header-cta {
     height: calc(320px*0.5);
   }
@@ -225,22 +228,20 @@ box-shadow: 0px 0px 20px 15px rgba(0,0,0,0.15);
   .header-cta-text h1 {
     margin-bottom: 5px;
   }
-
   .header-cta-text p {
+    margin-bottom: 15px;
     max-height: 70px;
-     margin-bottom: 15px;
   }
-
-
 }
-
 @media screen and (min-width: 480px) {
   header {
     height: 370px;
   }
-      .header-container{
+
+  .header-container {
     width: 80%;
   }
+
   .header-cta {
     height: calc(370px*0.5);
   }
@@ -253,46 +254,51 @@ box-shadow: 0px 0px 20px 15px rgba(0,0,0,0.15);
     /*left: calc(370px*0.5);*/
   }
 }
-
 @media only screen and (max-width: 620px) {
-  .feature-container{
+  .feature-container {
     width: 100%;
   }
-.feature-inside{
-  width: 280px;
-  margin-left:calc((100% - 280px) / 2)
-}
+
+  .feature-inside {
+    margin-left: calc((100% - 280px) / 2);
+    width: 280px;
+  }
 }
 @media only screen and (max-width: 767px) {
   body {
     font-size: 12px;
   }
-  .header-cta-text p {
-  max-height: 70px;
-}
-.feature-container{
-  padding: 0;
-}
-/*.feature-inside{
-  width: 280px;
-  margin-left:calc((100% - 280px) / 2)
-}*/
-}
 
+  .header-cta-text p {
+    max-height: 70px;
+  }
+
+  .feature-container {
+    padding: 0;
+  }
+
+  /*.feature-inside{
+    width: 280px;
+    margin-left:calc((100% - 280px) / 2)
+  }*/
+}
 @media only screen and (min-width: 768px) {
   header {
     height: 570px;
   }
-    .navbar-nav {
-  float: right;
-}
 
-.navbar-nav a:hover, footer a:hover {
-  border-bottom: 2px solid #CD5741;
-}
-      .header-container{
+  .navbar-nav {
+    float: right;
+  }
+
+  .navbar-nav a:hover, footer a:hover {
+    border-bottom: 2px solid #cd5741;
+  }
+
+  .header-container {
     width: 700px;
   }
+
   .header-cta {
     height: calc(570px*0.5);
   }
@@ -302,30 +308,25 @@ box-shadow: 0px 0px 20px 15px rgba(0,0,0,0.15);
   }
 
   .header-cta-text {
-    margin-left: 8%;
     left: calc(570px*0.5);
+    margin-left: 8%;
   }
-
 }
-
 @media only screen and (max-width: 992px) {
-    .feature-container{
-  padding: 10px 15px;
-  /*background-color: blue;*/
-}
-  .feature-container div{
-  padding: 0;
-  /*background-color: blue;*/
-}
+  .feature-container {
+    padding: 10px 15px;
+  }
+  .feature-container div {
+    padding: 0;
+  }
 }
 @media only screen and (min-width: 992px) {
-      .header-container{
+  .header-container {
     width: 800px;
   }
-
 }
 @media only screen and (min-width: 1200px) {
-    .header-container{
+  .header-container {
     width: 1050px;
   }
 }
@@ -337,9 +338,11 @@ box-shadow: 0px 0px 20px 15px rgba(0,0,0,0.15);
   header {
     height: 720px;
   }
-  .header-container{
+
+  .header-container {
     width: 1200px;
   }
+
   .header-cta {
     height: calc(720px*0.5);
   }
