--- a/Ars Futura/project/css/main.css
+++ b/Ars Futura/project/css/main.css
@@ -4,7 +4,7 @@ body {
   font-size: 16px;
   max-width: 1920px;
 }
-/*HELPER CLASS*/
+/*SUPPORTING ELEMENTS*/
 .vertical-align {
   position: absolute;
   top: 50%;
@@ -21,6 +21,28 @@ body {
   background-position: center bottom;
   background-repeat: no-repeat;
 }
+#loading {
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  position: fixed;
+  display: block;
+  opacity: 1;
+  background-color: #fff;
+  z-index: 99;
+  text-align: center;
+}
+
+#loading-image {
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  z-index: 100;
+}
 /********************************************Navigation********************************************/
 nav {
   background-color: #101724;
@@ -30,13 +52,18 @@ nav {
 .navbar-nav {
   font-weight: light;
 }
-
+.navbar-brand img{
+  width: 109px;
+  height: 37px;
+}
 .navbar-nav span {
   font-weight: bold;
 }
 
 /********************************************Header********************************************/
 header {
+  /*Fallback color*/
+  background-color: #101724;
   background-image: url(../images/header/hero-background.png);
   margin-top: 86px;
 }
@@ -69,6 +96,8 @@ header div {
 }
 
 .header-cta-image {
+  /*Fallback color*/
+  background-color: #CD5741;
   background-image: url(../images/header/hero-image.png);
   border-radius: 100%;
   border: 8px solid white;
@@ -237,15 +266,19 @@ footer {
   height: 44px;
   display: inline-block;
 }
-.footer-social a:hover img{
-  background-color: #CD5741;
+.social-icon{
+  width: 44px;
+  height: 44px;
 }
 .footer-about {
   text-align: center;
   font-size: 1.7em;
   margin: 60px 0px 40px 0;
 }
-
+.love-icon{
+  width: 25px;
+  height: 22px;
+}
 .footer-about span {
   font-weight: bold;
 }
@@ -267,6 +300,7 @@ footer {
   /*Specificity purposes*/
   .landing-page footer {
     height: 380px;
+    text-align: center;
   }
 
   .footer-logo {
@@ -410,8 +444,11 @@ footer {
 @media only screen and (min-width: 768px) {
   header {
     height: 570px;
+    margin-top: 0px;
   }
-
+.navbar-fixed-top{
+  position: inherit;
+}
   .navbar-nav {
     float: right;
   }
@@ -468,7 +505,6 @@ footer {
   body {
     margin-left: calc((100% - 1920px) / 2);
   }
-
   header {
     height: 720px;
   }
